# docs/api/openapi.json
@@ -392,14 +392,6 @@
                       }
                     }
                   },
-                  "contentMode": {
-                    "type": "string",
-                    "enum": [
-                      "full",
-                      "snippet",
-                      "ids"
-                    ]
-                  },
                   "maxSensitivity": {
                     "type": "string",
                     "enum": [
